--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 
 
-body h1{
-font-family: 'Archivo Black', sans-serif;
+body h1 {
+  font-family: 'Archivo Black', sans-serif;
 }
 
 body {
@@ -26,12 +26,12 @@ a {
 header {
   background-color: #000;
   padding: 15% 15%;
-  text-align:left;
+  text-align: left;
   display: flex;
   justify-content: space-between;
 }
 
-header h1{
+header h1 {
   font-weight: 300;
   font-size: 50px;
   line-height: 50px;
@@ -70,7 +70,7 @@ header p {
   align-items: center;
 }
 
-.postsWrapper nav img{ 
+.postsWrapper nav img {
   width: 80px;
   margin-right: 2.5%;
 }
@@ -83,6 +83,7 @@ header p {
   padding: 15px;
   margin-right: 2.5%;
 }
+
 .postsWrapper nav button:hover {
   background-color: #D1D5DB;
   color: #212936;
@@ -95,7 +96,7 @@ header p {
 
 
 /*** BERICHTE ***/
-#posts{
+#posts {
   padding-top: 5%;
 }
 
@@ -122,13 +123,14 @@ header p {
   line-height: 23px;
 }
 
-.postBox a{
+.postBox a {
   text-decoration: none;
   background-color: #212936;
   color: #fff;
   padding: 4px;
   margin-left: 10%;
 }
+
 .postBox a:hover {
   text-decoration: none;
   background-color: #D1D5DB;
@@ -139,21 +141,25 @@ header p {
 .postText {
   padding: 10% 7% 20% 7%;
 }
+
 .postText h3 {
   margin: 0;
   margin-bottom: 15px;
   margin-top: 5px;
 }
+
 .postText small {
   color: #ccc;
 }
-.postText a{
+
+.postText a {
   text-decoration: none;
   background-color: #212936;
   color: #fff;
   padding: 4px;
   margin-left: 0;
 }
+
 .postText a:hover {
   text-decoration: none;
   background-color: #D1D5DB;
@@ -161,23 +167,27 @@ header p {
   padding: 4px;
 }
 
-.postImage {
-  background-image: url('https://picsum.photos/seed/picsum/200/300');
+/*Posts Bilder*/
+.postImageWindow {
   width: auto;
   height: 300px;
   background-size: cover;
-  background-position:center; 
+  background-position: center;
   border-radius: 10px 10px 0 0;
 }
 
+.w1t1 {
+  background-image: url("/assets/img/htmlbild.jpg");
+}
 
-
-.contentBox {
+/*** Alternative Post Image ***/
+#Tab1 .contentBox {
   background-color: #F9FAFB;
   padding: 5%;
   color: #000;
 }
-.contentBox{
+
+.contentBox {
   padding: 7%;
 }
 
@@ -185,14 +195,14 @@ header p {
   background-color: #F3F4F6;
 }
 
-footer{
-  padding:7%;
+footer {
+  padding: 7%;
 }
 
-footer a{
+footer a {
   color: white;
   font-size: 3rem;
-text-decoration: none;
+  text-decoration: none;
 }
 
 
@@ -200,11 +210,6 @@ text-decoration: none;
 
 
 
-/*Posts Bilder*/ 
-
-.w1t1{
-  background-image: url(/assets/img/htmlbild.jpg);
-}
 
 
 
@@ -213,20 +218,22 @@ text-decoration: none;
 /*Modal*/
 .modal {
   display: none;
-  position: fixed; 
+  position: fixed;
   z-index: 1;
-  padding-top: 100px; 
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
+
 .modal.modalActive {
   display: block;
 }
+
 .modal-content {
   background-color: #fefefe;
   margin: auto;
@@ -238,12 +245,14 @@ text-decoration: none;
   animation-name: animatetop;
   animation-duration: 0.4s
 }
+
 .close {
   color: #aaaaaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
+
 .close:hover,
 .close:focus {
   color: #000;
@@ -255,11 +264,25 @@ text-decoration: none;
 
 
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
 
 @keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
