--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,9 @@ header p {
   gap: 30px;
 }
 
+
+
+/*** POST BOX ***/
 .postBox {
   color: #555;
   /*width: 350px;*/
@@ -115,8 +118,6 @@ header p {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
-
-
 
 .postBox p {
   margin: 0;
@@ -138,6 +139,9 @@ header p {
   padding: 4px;
 }
 
+
+
+/*** POST TEXT ***/
 .postText {
   padding: 10% 7% 20% 7%;
 }
@@ -167,7 +171,10 @@ header p {
   padding: 4px;
 }
 
-/*Posts Bilder*/
+
+
+
+/*** POST IMAGE ****/
 .postImageWindow {
   width: auto;
   height: 300px;
@@ -176,9 +183,7 @@ header p {
   border-radius: 10px 10px 0 0;
 }
 
-
-/*** Alternative Post Image ***/
-#Tab1 article:nth-child() .postImageWindow {
+#Tab1 article:nth-child(1) .postImageWindow {
   background-image: url("/assets/img/htmlbild.jpg");
 }
 
@@ -188,21 +193,25 @@ header p {
 
 
 
-
-#Tab1 .contentBox {
-  background-color: #F9FAFB;
-  padding: 5%;
-  color: #000;
-}
-
+/*** CONTENT-BOX ***/
 .contentBox {
   padding: 7%;
+  color: #000;
+  padding: 5%;
 }
 
-#niicee.contentBox {
+#Tab1.contentBox {
+  background-color: #F9FAFB;
+}
+
+#niicee.contentBox,
+#fazit.contentBox {
   background-color: #F3F4F6;
 }
 
+
+
+/*** FOOTER ***/
 footer {
   padding: 7%;
 }
@@ -211,86 +220,4 @@ footer a {
   color: white;
   font-size: 3rem;
   text-decoration: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-/*Modal*/
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal.modalActive {
-  display: block;
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s
-}
-
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-
-
-
-@-webkit-keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0
-  }
-
-  to {
-    top: 0;
-    opacity: 1
-  }
-}
-
-@keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0
-  }
-
-  to {
-    top: 0;
-    opacity: 1
-  }
 }
